# TapTun

./: .gitignore  BENCHMARKS.md  PROJECT_SUMMARY.md  QUICKREF.md  QUICKSTART.md  README.md  STATUS.md  STORY.md  build.zig  build.zig.zon  test_macos_utun.zig  test_utun_integration.zig
bench/: latency.zig  throughput.zig
docs/: ARCHITECTURE_DIAGRAMS.md  INTEGRATION_SOFTETHER.md
examples/: macos_utun_example.zig
examples/android/: CMakeLists.txt  README.md
examples/android/cpp/: jni_wrapper.cpp  zigtaptun_android.h
examples/android/kotlin/: ZigTapTunVpnService.kt
examples/ios/: PacketTunnelProvider.swift  README.md  ZigTapTun-Bridging-Header.h
include/: taptun_ffi.h
src/: arp.zig  c_ffi.zig  device.zig  dhcp_client.zig  dns.zig  pcap.zig  queue.zig  routing.zig  taptun.zig  translator.zig  tun_adapter.zig
src/platform/: android.zig  freebsd.zig  ios.zig  linux.zig  macos.zig  windows.zig
src/routing/: linux.zig  macos.zig  windows.zig
